# OpenMP

./: .gitignore  CMakeLists.txt  build.sh
exe01/: hello.c
exe02/: .PI_Integration.c.swp  PI_Integration.c
exe03/: PI_Integration.c
exe04/: PI_Integration.c
